@@ -803,7 +803,7 @@ class PokerAvatar:
     
     def getPlayerStats(self, table, serialSought):
         if self.user.isLogged():
-            return self.service.getUserStatsLookup().getAttrsAsPacket(table, serialSought)
+            return self.service.getUserStatsLookup().getAttrsAsPacket(table = table, serial = serialSought)
         else:
             return PacketError(code = PacketPokerGetPlayerStats.NOT_LOGGED,
                                message = "Not logged in",
@@ -917,7 +917,7 @@ class PokerAvatar:
                                                            wait_for = player.wait_for,
                                                            seat = player.seat))
             # Send the stats packet, generated by the UserStats package.
-            self.sendPacketVerbose(self.service.getUserStatsLookup().getAttrsAsPacket(table, player.serial))
+            self.sendPacketVerbose(self.service.getUserStatsLookup().getAttrsAsPacket(table = table, serial = player.serial))
             if not game.isPlaying(player.serial):
                 self.sendPacketVerbose(PacketPokerPlayerChips(game_id = game.id,
                                                               serial = player.serial,
